fixed: comment icon overlaps long label in simple select/select1 questions, https://github.com/kobotoolbox/enketo-express/issues/1001

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -310,10 +310,7 @@ legend {
     border: none;
     width: 100%;
     padding: 0;
-    margin-bottom: 12px; //works in Chrome
-    >span {
-        vertical-align: 12px;
-    }
+    margin-bottom: 12px;
 }
 
 //works in safari, some other webkit browsers
