--- a/src/widget/comment/commentwidget.scss
+++ b/src/widget/comment/commentwidget.scss
@@ -90,12 +90,6 @@ $padding: 30px;
     }
 }
 
-// legend hack
-legend .btn-comment .icon {
-    position: absolute;
-    top: -2px;
-}
-
 .or[dir="rtl"] {
     .btn-comment {
         left: auto;
